# cuda-graphics

./: .clang-tidy  .gitignore  CMakeLists.txt  clean.sh  dgpu.h  flake.nix  global.h  graphics.cpp  graphics.h  kernel.cu  kernel.h  main.cpp  temperature-display.ipynb
